navbar and header added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo_container">
+                <div class="logo">The Odin Project</div>
+            </div>
+            <ul class="links">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <header class="header">
+        <div class="header_container">
+            <div class="left_container">
+                <h1>This is my first website.</h1>
+                <p>I aspire to apply myself to the future of beautifully simple and inttuitive web designs. I believe that small, bootstrapped web apps curated for small business need to be created in a way that results in as few clicks as possible for the user.</p>
+                <button>Love it!</button>
+            </div>
+            <div class="right_container">
+                <img src="img1.jpeg" alt="stock photo">
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
