--- a/index.html
+++ b/index.html
@@ -33,10 +33,32 @@
                 <button>Love it!</button>
             </div>
             <div class="right_container">
-                <img src="img1.jpeg" alt="stock photo">
+                <img src="resources/img1.jpeg" alt="stock photo">
             </div>
         </div>
     </header>
-    
+    <section class="card_container">
+        <div class="card_title">
+            <h3>Visions for my development:</h3>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <img src="resources/efficient.png" alt="efficiency">
+                <p>Web tools need to save people time. "As few clicks as possible"</p>
+            </div>
+            <div class="card">
+                <img src="resources/efficient.png" alt="efficiency">
+                <p>Web tools need to save people time. "As few clicks as possible"</p>
+            </div>
+            <div class="card">
+                <img src="resources/efficient.png" alt="efficiency">
+                <p>Web tools need to save people time. "As few clicks as possible"</p>
+            </div>
+            <div class="card">
+                <img src="resources/efficient.png" alt="efficiency">
+                <p>Web tools need to save people time. "As few clicks as possible"</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
