--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header_container">
             <div class="left_container">
                 <h1>This is my first website.</h1>
-                <p>I aspire to apply myself to the future of beautifully simple and inttuitive web designs. I believe that small, bootstrapped web apps curated for small business need to be created in a way that results in as few clicks as possible for the user.</p>
+                <p>I aspire to apply myself to the future of beautifully simple and intuitive web designs. I believe that small, bootstrapped web apps curated for small business need to be created in a way that results in as few clicks as possible for the user.</p>
                 <button>Love it!</button>
             </div>
             <div class="right_container">
@@ -59,6 +59,26 @@
                 <p>Web tools need to save people time. "As few clicks as possible"</p>
             </div>
         </div>
+    </section>
+    <section class="quote">
+        <div class="quote_container">
+            <p class="the_quote">Luck is what happens when preperation meets opportunity.</p>
+            <h3 class="signature">- Seneca</h3>
+        </div>
+    </section>
+    <section class="action">
+        <div class="action_container">
+            <div class="action_content">
+                <h2>Get in contact!</h2>
+                <p>Email me for more information on my work, dreams, and future.</p>
+            </div>
+            <div class="action_button">
+                <button>Email</button>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <p>Copyright &#169 Hunter Lucas 2024</p>
     </section>
 </body>
 </html>
